Corrected footer placement and form elements alignment

--- a/CSS files/common.css
+++ b/CSS files/common.css
@@ -437,7 +437,7 @@ footer h2 {
     height: 2em;
     }
     .Copyright{
-    padding:1.5% 0%;
+    padding:1% 0%;
     }
 }
 
